--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,7 @@
 
 <body>
 
-<button id="way0a" onclick="way0a()" style="display:block;" class="UsebuttonClass">way0a</button>
-<button id="way0b" onclick="way0b()" style="display:block;" class="UsebuttonClass">way0b</button>
+<button id="way0" onclick="way0()" style="display:block;" class="UsebuttonClass">way0</button>
 <button id="way1" onclick="way1()" style="display:block;" class="UsebuttonClass">way1</button>
 <button id="way2" onclick="way2()" style="display:block;" class="UsebuttonClass">way2</button>
 
@@ -32,35 +31,9 @@ var urls2try = ['https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/d
 // When running repetitive processes in a while loop, like querying a REST API endpoint followed by a pause several times, it is important to make the loop stop after the REST API endpoint returns an OK (200 or 201) status to prevent "spamming" an endpoint. 
 
 
-async function way0a() {
+async function way0() {
 	
-	// Way 0: make the loop depend on a flag if statement
-	console.log('Way 0: make the loop depend on a flag if statement');
-	var val = [1, 2, 3, 4, 5];
-	var i = 0;
-	var flag = "run";
-	while (flag == "run" && i < val.length) {
-		if (val[i] == 3) {
-			flag = "stop";
-		}
-		
-		if (flag != "stop") {
-			i += 1;
-		}
-		
-		console.log('i: ', i);
-	}
-	
-	console.log('val[i]: ', val[i]);
-	console.log('flag: ', flag);
-}
-
-// ----------------------------------------------------
-
-
-async function way0b() {
-	
-	// Way 0b: make the loop depend on a flag in try catch
+	// Way 0: make the loop depend on a flag in try catch
 	console.log('Way 0b: make the loop depend on a flag in try catch');
 	
 	// if it has no error, it should stop immediately, so it should stop at i = 1
@@ -68,9 +41,9 @@ async function way0b() {
 	var flag = "run";
 	while (flag == "run" && i < urls2try.length) {
 		try {
+			console.log('url to try to fetch: ', urls2try.at(i));
 			var blob_object = await fetch_CORS(urls2try.at(i));
 			// if there is an error, it run everything in the try
-			console.log('blob_object: ', blob_object);
 		} catch (error) {
 			console.log('error: ', error);
 		}
@@ -82,92 +55,121 @@ async function way0b() {
 		if (flag != "stop") {
 			i += 1;
 		}
+		console.log('blob_object: ', blob_object);
+		console.log('flag: ', flag);
+		console.log('i: ', i);
 	}
-	
-	console.log('flag: ', flag);
+
 }
   
 // ----------------------------------------------------
   
 async function way1() {
-
-  // Way 1: make the loop depend on the value of a variable
-  
-  var blob_object = {};
-  var i = 0;
-  while (blob_object != {} && i < urls2try.length) {
-    try {
-        blob_object = await fetch_CORS(urls2try.at(i));
-        console.log('blob_object: ', blob_object)
-        i += 1;
-        console.log('i: ', i);
-      } catch (error) {
-        console.log('error: ', error);
-      }
-  }
+	
+	// Way 1: make the loop depend on the value of a variable
+	
+	var blob_object = {};
+	var i = 0;
+	while (blob_object != {} && i < urls2try.length) {
+		try {
+			console.log('url to try to fetch: ', urls2try.at(i));
+			blob_object = await fetch_CORS(urls2try.at(i));
+			i += 1;
+		} catch (error) {
+			console.log('error: ', error);
+		}
+		console.log('blob_object: ', blob_object);
+		console.log('i: ', i);
+	}
 
 }
 
 // ----------------------------------------------------
 
 // This method allows for the loop to stop quickly, however it may run additional processes like a REST API call
+
 // Way 2: make the loop depend on the existence of variables
 async function way2() {
 	
 	var blob_object = {};
 	var i = 0;
 	
-	while (blob_object != null && i < urls2try.length) {
+	while (blob_object == null && i < urls2try.length) {
 		try {
+			console.log('url to try to fetch: ', urls2try.at(i));
 			blob_object = await fetch_CORS(urls2try.at(i));
-			console.log('blob_object: ', blob_object);
 			i += 1;
-			console.log('i: ', i);
 		} catch (error) {
 			console.log('error: ', error);
 		}
+		
+		console.log('blob_object: ', blob_object);
 		
 		if (blob_object != {}) {
 			var out = blob_object;
 			delete blob_object;
 		}
+		
+		console.log('i: ', i);
 	}
 
 }
 
-
-// ----------------------------------------------------
-
-
 // I found that removing the variable from memory makes the loop stop quickest, without additional unwanted processes. 
 
-
+// ----------------------------------------------------
   
 // Way 3: make the loop depend on the value of eventListeners (called a Signal)
 
-// let max_loop_val = obj_env.arr_auth.length;
+function createSignal(initialValue) {
+  let value = initialValue;
+  const listeners = [];
 
-//    while (regexp.test(obj_temp.status) == false && obj_env.arr_auth != null && i < max_loop_val) {
-//      if (obj_temp.file_download_url == "No file found") {
-//      // Option 0: create a new file
-//       obj_temp = await functionName0(obj_env.arr_auth[i], 'run GitHub Action', input_text, "temp")
-//        .then(async function(out) { obj_temp.status = out.status; await new Promise(r => setTimeout(r, 2000)); return obj_temp; })
-//      } else {
-//       // Option 1: modify an existing file
-//      let desired_path = obj_temp.file_download_url[0].split('main/').pop();
-//      
-//       obj_temp = await functionName1(obj_env.arr_auth[i], 'run GitHub Action', input_text, "temp", obj_temp.sha_arr)
-//        .then(async function(out) { obj_temp.status = out.status; await new Promise(r => setTimeout(r, 2000)); return obj_temp; })
-//      }
-//     
-//     if (regexp.test(obj_temp.status) == true) {
-//      obj_env.auth = obj_env.arr_auth[i];
-//      console.log('[3] obj_env.auth: ', obj_env.auth);
-//      delete obj_env.arr_auth;
-//     }
-//      i += 1;
-//     }
+  function setValue(newValue) {
+    value = newValue;
+    listeners.forEach(listener => listener(value));
+  }
 
+  function getValue() {
+    return value;
+  }
+
+	
+  function subscribe(listener) {
+    listeners.push(listener);
+    return () => {
+      const index = listeners.indexOf(listener);
+      if (index !== -1) {
+        listeners.splice(index, 1);
+      }
+    };
+  }
+
+  return {
+    setValue,
+    getValue,
+    subscribe,
+  };
+}
+  
+async function way3() {
+
+	const signal = createSignal({});
+	
+	var i = 0;
+	while (signal.getValue() == {} && i < urls2try.length) {
+		try {
+			console.log('url to try to fetch: ', urls2try.at(i));
+			signal.setValue(await fetch_CORS(urls2try.at(i)));
+			i += 1;
+		} catch (error) {
+			console.log('error: ', error);
+		}
+		console.log('signal.getValue(): ', signal.getValue());
+		console.log('i: ', i);
+	}
+
+}
 
 // -------------------------------------------------
 
