--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,7 @@
 <button id="way0" onclick="way0()" style="display:block;" class="UsebuttonClass">way0</button>
 <button id="way1" onclick="way1()" style="display:block;" class="UsebuttonClass">way1</button>
 <button id="way2" onclick="way2()" style="display:block;" class="UsebuttonClass">way2</button>
+<button id="way3" onclick="way3()" style="display:block;" class="UsebuttonClass">way3</button>
 
 <script>
 
