--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@ window.addEventListener('beforeunload', function() {
 	
 // ----------------------------------------------------
 
-var urls2try = ['https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf', 'https://storage.googleapis.com/on-the-way2selfrespect/yellow.png', 'https://s3-us-west-2.amazonaws.com/openai-assets/research-covers/language-unsupervised/language_understanding_paper.pdf'];
+var urls2try = ['https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf', 'https://s3-us-west-2.amazonaws.com/openai-assets/research-covers/language-unsupervised/language_understanding_paper.pdf', 'https://storage.googleapis.com/on-the-way2selfrespect/yellow.png'];
 
 // ----------------------------------------------------
 
