--- a/index2.html
+++ b/index2.html
@@ -71,18 +71,23 @@ async function way1() {
 	
 	var blob_object = {};
 
-	console.log('blob_object.length: ', blob_object.length);
+	console.log('Object.keys(blob_object);: ', Object.keys(blob_object););
 	
 	var i = 0;
-	while (blob_object.length == 0 && i < urls2try.length) {
+	while (Object.keys(blob_object).length == 0 && i < urls2try.length) {
 		try {
 			console.log('url to try to fetch: ', urls2try.at(i));
 			blob_object = await fetch_CORS(urls2try.at(i));
+			// if there is a fetch error blob_object = undefined
+			
 			i += 1;
 		} catch (error) {
 			console.log('error: ', error);
 		}
+		
+		if (blob_object == undefined) { blob_object = {}; } 
 		console.log('blob_object: ', blob_object);
+		
 		console.log('i: ', i);
 	}
 
@@ -99,6 +104,7 @@ async function way2() {
 	var i = 0;
 
 	// blob_object = undefined means that blob_object = null
+	// blob_object = {} is not blob_object = null
 	
 	while (blob_object != null && i < urls2try.length) {
 		try {
@@ -110,12 +116,11 @@ async function way2() {
 		} catch (error) {
 			console.log('error: ', error);
 		}
-		console.log('blob_object: ', blob_object);
 		
 		if (blob_object == undefined) { blob_object = {}; } 
 		console.log('blob_object: ', blob_object);
 		
-		if (blob_object != {}) {
+		if (Object.keys(blob_object).length > 0) {
 			var out = blob_object;
 			delete blob_object;
 		}
@@ -165,10 +170,10 @@ function createSignal(initialValue) {
 async function way3() {
 
 	const signal = createSignal({});
-	console.log('signal.getValue().length: ', signal.getValue().length);
+	console.log('Object.keys(signal.getValue()).length: ', Object.keys(signal.getValue()).length);
 	
 	var i = 0;
-	while (signal.getValue().length == 0 && i < urls2try.length) {
+	while (Object.keys(signal.getValue()).length == 0 && i < urls2try.length) {
 		try {
 			console.log('url to try to fetch: ', urls2try.at(i));
 			signal.setValue(await fetch_CORS(urls2try.at(i)));
