--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,8 @@ async function way1() {
 	
 	var blob_object = {};
 
-	console.log('Object.keys(blob_object);: ', Object.keys(blob_object););
+	console.log('Object.keys(blob_object): ', Object.keys(blob_object));
+	console.log('Object.keys(blob_object).length: ', Object.keys(blob_object).length);
 	
 	var i = 0;
 	while (Object.keys(blob_object).length == 0 && i < urls2try.length) {
