--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ async function processEvent_timeseries_data_source(event) {
 }
 
 
-document.getElementById("timeseries_data_source").addEventListener("click", processEvent_timeseries_data_source, false);
+document.getElementById("timeseries_data_source").addEventListener("change", processEvent_timeseries_data_source, false);
 
 // -----------------------------------------------
 	
