--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ window.addEventListener('beforeunload', function() {
 
 async function processEvent_timeseries_data_source(event) {
 
+	console.log('event: ', event);
+	
 	if (document.getElementById("timeseries_data_source").value == "Weather_prediction") {
 		document.getElementById("LOCATION").style.display = 'block';
 	} else {
