--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head></head>
 <body>
 
-<button id="plot_data_bar_graph" onclick="plot_data_bar_graph()" style="display:none;">plot_data_bar_graph</button>
-<button id="plot_line_graph" onclick="plot_line_graph()" style="display:none;">plot_line_graph</button>
+<button id="plot_data_bar_graph" onclick="plot_data_bar_graph()" style="display:block;">plot_data_bar_graph</button>
+<button id="plot_line_graph" onclick="plot_line_graph()" style="display:block;">plot_line_graph</button>
 
 <div id="data_display" style="display:block; text-align: left; width: 600px;"></div>
 
