--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@ async function plot_data_bar_graph() {
 	svg.selectAll("rect")
 	    .data(bins)
 	    .enter()
-	    .append("rect")
-	    .attr("x", function(d,i) { console('d.x0: ', d.x0); return i; })
-	    .attr("y", function(d) { return d; })
-	    .attr("width", function(d) { return d.x1 - d.x0 - 1; })
-	    .attr("height", function(d) { return d.length * 5; })
-	    .attr("fill", "steelblue");
+	//     .append("rect")
+	//     .attr("x", function(d,i) { console('d.x0: ', d.x0); return i; })
+	//     .attr("y", function(d) { return d; })
+	//     .attr("width", function(d) { return d.x1 - d.x0 - 1; })
+	//     .attr("height", function(d) { return d.length * 5; })
+	//     .attr("fill", "steelblue");
 
 	document.getElementById('data_display').appendChild(svgElement);
 }
@@ -65,10 +65,14 @@ async function min_max_of_array(arr) {
 async function plot_line_graph() {
 	
 	const dataArray = [30, 50, 80, 120, 200];
+
+	// ---------------------------------------------------
 	
 	const [min_val, max_val] = await min_max_of_array(dataArray);
 	console.log("min_val: ", min_val);
 	console.log("max_val: ", max_val);
+
+	// ---------------------------------------------------
 	
 	var svgElement = document.createElement('svg');
 	
