--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ async function plot_line_graph() {
 	const scale = d3.scaleLinear().domain([0, dataArray.length]).range([min_val, max_val]);
 	console.log("scale: ", scale);
 	
-	const svg = d3.select('body').append(svgElement).attr('width', 400).attr('height', 200);
+	const svg = d3.select('body').append("svg").attr('width', 400).attr('height', 200);
 	console.log("svg: ", svg);
 	
 	// Plot data on chart, Add bars to the chart
