--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ async function plot_line_graph() {
 	const scale = d3.scaleLinear().domain([0, dataArray.length]).range([min_val, max_val]);
 	console.log("scale: ", scale);
 	
-	const svg = d3.select('body').append("svg").attr('width', 400).attr('height', 200);
+	const svg = d3.select('svgElement').append("svg").attr('width', 400).attr('height', 200);
 	console.log("svg: ", svg);
 	
 	// Plot data on chart, Add bars to the chart
@@ -89,7 +89,7 @@ async function plot_line_graph() {
 		.enter()
 		.append('rect').attr('width', d => scale(d)).attr('height', 20).attr('y', (d,i) => d).attr('x', (d,i) => i);
 	
-	document.getElementById('data_display').appendChild(svg);
+	document.getElementById('data_display').appendChild(svgElement);
 }
 
 
